<resources>
    <string name="app_name">Devise</string>
    <string name="affichage">%1$s en poche : %2$.2f</string>
    <string name="ajouter">Ajouter</string>
    <string name="retirer">Retirer</string>
    <string name="decouvert">Découvert interdit</string>
    <string name="compteazero">Plus de liquidité sur le compte</string>
    <string name="title_activity_porte_feuille">Contenu du portefeuille</string>
    <string name="title_activity_update">Mise à jour/Ajout de devises</string>
    <string name="title_activity_devise">Gestion des devises</string>
    <string name="cancel">Annuler</string>
    <string name="ok">Valider</string>
    <string name="action_settings">Réglages</string>
    <string name="majDevise">Mettre à jour une devise</string>
    <string name="addDevise">"Ajouter une devise"</string>
    <string name="entreNombre">Entrer une valeur numérique</string>
    <string name="retour">Revenir au portefeuille</string>
    <string name="da_confirme_suppression">Voulez-vous supprimer la devise du portefeuille ?</string>
    <string name="da_oui">Oui</string>
    <string name="da_non">Non</string>
    <string name="da_devise_nulle">Devise à 0</string>
    <string name="nomExistant">La devise existe déjà</string>
</resources>
