<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.portefeuille.dg.devise.UpdateActivity">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.portefeuille.dg.devise.UpdateActivity"
        tools:showIn="@layout/activity_update">


        <TextView
            android:id="@+id/tv_affichage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majDevise"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            />


        <EditText
            android:id="@+id/et_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/tv_affichage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintLeft_toLeftOf="@id/et_nom"
            app:layout_constraintTop_toBottomOf="@id/et_nom"
            android:layout_marginTop="40dp"
            android:onClick="ok"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintRight_toRightOf="@id/et_nom"
            app:layout_constraintTop_toBottomOf="@id/et_nom"
            android:layout_marginTop="40dp"
            android:onClick="cancel"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
