<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.portefeuille.dg.devise.DeviseActivity"
    >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.portefeuille.dg.devise.DeviseActivity"
        tools:showIn="@layout/activity_devise">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/retour">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:onClick="retirer"
                    android:text="@string/retirer"
                    app:layout_constraintRight_toRightOf="@id/et_nom"
                    app:layout_constraintTop_toBottomOf="@id/et_nom"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_affichage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/affichage"

                    android:textSize="25sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/et_nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_affichage" />

                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:onClick="ajouter"
                    android:text="@string/ajouter"
                    app:layout_constraintLeft_toLeftOf="@id/et_nom"
                    app:layout_constraintTop_toBottomOf="@id/et_nom"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorAccent"/>
            </android.support.constraint.ConstraintLayout>

        </ScrollView>


        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="15dp"
            android:onClick="retour"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>

